--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -46,6 +46,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="0.5dp"
                 android:paddingEnd="16dp"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:background="#D3D3D3"/>
         </LinearLayout>
 
