--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.android.sssh.SettingsActivity">
+    tools:context="com.example.android.sssh.SettingsActivity"
+    android:weightSum="1">
 
 
     <LinearLayout
@@ -21,9 +22,12 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_margin="@dimen/activity_vertical_margin"
-            android:text="@string/Turn_on_off"
+            android:text="@string/on_off"
+            android:fontFamily="sans-serif"
+            android:textColor="#808080"
+            android:textSize="24sp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/colorPrimaryDark"/>
+            android:textStyle="bold"/>
 
         <View
             android:layout_width="fill_parent"
@@ -130,6 +134,38 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
             android:background="@android:color/holo_blue_light"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:fontFamily="sans-serif"
+            android:text="@string/modes"
+            android:textSize="24sp"
+            android:textStyle="bold"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <!-- Mode drop-down spinner -->
+        <Spinner
+            android:id="@+id/spinner_gender"
+            android:layout_alignParentEnd="true"
+            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:paddingRight="16dp"
+            android:spinnerMode="dropdown"/>
+        </RelativeLayout>
 
 
     </LinearLayout>
