Choices in mode-applied | PreferencFragment are used to create settings activity, JobScheduler is pending

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -7,7 +7,7 @@
     </string-array>
     <!-- Arrays values for the preference -->
     <string-array name="mode_selection_value">
-        <item>0</item>
-        <item>1</item>
+        <item>Silent</item>
+        <item>Vibrate</item>
     </string-array>
 </resources>
