--- a/app/src/main/res/layout/edit_place_dialog.xml
+++ b/app/src/main/res/layout/edit_place_dialog.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="4dp"/>
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/nameOfPlaceByUser"
         android:inputType="text|textAutoComplete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
