--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -67,6 +67,7 @@
                 android:layout_gravity="start"
                 android:maxLines="1"
                 android:ellipsize="end"
+                android:text="@string/default_name_tv"
                 android:textAlignment="viewStart"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
